--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 12 11:11:29 EST 2026
-sdk.dir=C\:\\Users\\dauri\\AppData\\Local\\Android\\Sdk
+#Thu Feb 12 13:59:21 EST 2026
+sdk.dir=C\:\\Users\\eduar\\AppData\\Local\\Android\\Sdk
