--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 12 11:11:29 EST 2026
-sdk.dir=C\:\\Users\\dauri\\AppData\\Local\\Android\\Sdk
+#Sun Feb 15 09:44:18 EST 2026
+sdk.dir=/Users/mvanarsdale/Library/Android/sdk
