--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 15 22:32:54 EST 2026
-sdk.dir=C\:\\Users\\jerem\\AppData\\Local\\Android\\Sdk
+#Mon Feb 16 11:46:52 EST 2026
+sdk.dir=C\:\\Users\\dauri\\AppData\\Local\\Android\\Sdk
