--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 16 11:46:52 EST 2026
-sdk.dir=C\:\\Users\\dauri\\AppData\\Local\\Android\\Sdk
+#Mon Feb 16 18:49:39 EST 2026
+sdk.dir=/Users/mvanarsdale/Library/Android/sdk
