--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 23 13:59:40 EST 2026
-sdk.dir=C\:\\Users\\eduar\\AppData\\Local\\Android\\Sdk
+#Fri Feb 27 12:10:59 EST 2026
+sdk.dir=/Users/mvanarsdale/Library/Android/sdk
