--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 16 18:49:39 EST 2026
-sdk.dir=/Users/mvanarsdale/Library/Android/sdk
+#Fri Feb 27 12:40:13 EST 2026
+sdk.dir=C\:\\Users\\jerem\\AppData\\Local\\Android\\Sdk
